[package]
name = "news_api_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
rocket = { version = "0.5.0", features = ["secrets", "tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
